--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
                 </div>
             </section>
             <section class="skills section" id="skills">
-                <h2 class="section-title">Skills</h2>
-                     <div class="skillbar clearfix " data-percent="30%">
-	<div class="skillbar-title" style="background: #124e8c;"><span>HTML / CSS / JS</span></div>
-	<div class="skillbar-bar" style="background: #4288d0;"></div>
-	<div class="skill-bar-percent">30%</div>
-</div>
-                </div>
+            <h2 class="section-title">Skills</h2>
+                <div class="skills__container bd-grid">
+                    <div class="skills__box">
+                        <h3 class="skills__subtitle">Development</h3>
+                        <span class="skills__name">Html</span>
+                        <span class="skills__name">Javascript</span>
             </section>
             <section class="portfolio section" id="portfolio">
                 <h2 class="section-title">Waifu</h2>
