--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaPjgQk51ojNrqDGAqVCdE8_dVfBI1IfJ7X2HFjFR3gP9NFtQQJ5sqwb1u&s=10" alt="">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ aPjgQk51ojNrqDGAqVCdE8_dVfBI1IfJ7X2HFjFR3gP9NFtQQJ5sqwb1u&s=10" alt="">
                         <div class="portfolio__link">
-                            <a href="https://anilist.co/character/128063" class="portfolio__link-name">View details</a>
+                            <a href="https://tsuntsun.fandom.com/wiki/Nino_Nakano" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                 </div>
