--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="home__scroll">
                         <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
                     </div>
-                    <img src="https://telegra.ph/file/88d818ebbc371788ed0be.jpg" alt="" class="home__img">
+                    <img src="https://i.pinimg.com/736x/1c/18/d8/1c18d8b9df09189c756d79b90196d4d1.jpg" alt="" class="home__img">
                 </div>
             </section>
             <section class="about section" id="about">
@@ -59,6 +59,7 @@
                         <h3 class="skills__subtitle">Development</h3>
                         <span class="skills__name">Html</span>
                         <span class="skills__name">Javascript</span>
+                        <span class="skills__name">css</span>
             </section>
             <section class="portfolio section" id="portfolio">
                 <h2 class="section-title">Waifu</h2>
