--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                         <span class="skills__name">Html</span>
                         <span class="skills__name">Javascript</span>
                         <span class="skills__name">css</span>
+                        <div class="skills__img">
+                        <img src="https://telegra.ph/file/7e18c386e686a7ab44258.png" alt="">
+                    </div>
             </section>
             <section class="portfolio section" id="portfolio">
                 <h2 class="section-title">Waifu</h2>
