--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="stylesheet.css">
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-        <title>PORTFOLIO</title>
+        <title>Saktidev</title>
+        <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/736x/1c/18/d8/1c18d8b9df09189c756d79b90196d4d1.jpg">
     </head>
     <body>
         <header class="l-header">
@@ -64,7 +65,7 @@
                         <img src="https://telegra.ph/file/7e18c386e686a7ab44258.png" alt="">
                     </div>
             </section>
-            <section class="portfolio section" id="portfolio">
+            <section class="portfolio section" id="waifu">
                 <h2 class="section-title">Waifu</h2>
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
